test/integration/bad/for_loops/name_in_use_foreach.stan
data {
  array[10] int N;
}
generated quantities {
  int foo;

  for (foo in N) {
    print("foo");
  }
}
